Fix grid spacing

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -150,6 +150,10 @@
     }
 
     @media (min-width: 1024px) {
+      grid-column: 2 / 10;
+    }
+
+    @media (min-width: 1440px) {
       grid-column: 2 / 6;
     }
 
